# e-poetry

./: .gitignore  Notes.md  README.md  pyproject.toml
src/mypackage/: main.py
